--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.aquatrack</groupId>
@@ -71,12 +72,12 @@
 
     <build>
         <plugins>
+            <!-- Plugin Surefire para testes (mantido) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
                 <configuration>
-                    <!-- Permite o carregamento dinâmico do agent e libera modo experimental do Byte Buddy no Java 24 -->
                     <argLine>-XX:+EnableDynamicAgentLoading -Dnet.bytebuddy.experimental=true</argLine>
                 </configuration>
             </plugin>
@@ -88,6 +89,8 @@
                     <useModulePath>false</useModulePath>
                 </configuration>
             </plugin>
+
+            <!-- Plugin Shade para criar o "uber-jar" (JAR com dependências) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -101,9 +104,12 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>projeto.grupo04.App</mainClass>
+                                    <!-- CLASSE PRINCIPAL CORRIGIDA -->
+                                    <mainClass>com.aquatrack.App</mainClass>
                                 </transformer>
                             </transformers>
+                            <!-- Nome do JAR com dependências (para uso no Dockerfile) -->
+                            <finalName>${project.artifactId}-${project.version}-jar-with-dependencies</finalName>
                         </configuration>
                     </execution>
                 </executions>
@@ -117,5 +123,4 @@
             <url>https://repo.maven.apache.org/maven2</url>
         </repository>
     </repositories>
-
 </project>
